# BoxCar2D.cpp

./: CMakeLists.txt  README.md  best1.0240426  best2.515  best3.txt  boxcar2d  build.sh  draw.py  out+.txt  out.txt  out_+.txt  temp.py
results/: es_1  es_1.cars  es_100  es_101  es_105  es_106  es_107  es_108  es_109  es_111  es_112  es_122  es_122.cars  es_126  es_126.cars  es_130  es_130.cars  es_133  es_133.cars  es_134  es_134.cars  es_135  es_135.cars  es_140  es_140.cars  es_141  es_141.cars  es_145  es_147  es_149  es_151  es_153  es_156  es_158  es_159  es_159.cars  es_16  es_16.cars  es_164  es_164.cars  (+110 more)
testbed/: CMakeLists.txt  car.cpp  car.h  chromosome.cpp  chromosome.h  es_solver.cpp  main.cpp  settings.cpp  settings.h  sga_solver.cpp  testcase.cpp  testcase.hpp
testbed/tests/: collision_filtering.cpp  domiko.cpp  es_benchmark_seed0.cpp  es_benchmark_seed0.hpp  es_benchmark_seed1.cpp  es_benchmark_seed1.hpp  es_mountains.cpp  es_mountains.hpp  es_random_track.cpp  es_random_track.hpp  es_small_hills.cpp  es_small_hills.hpp  es_straight_line.cpp  es_straight_line.hpp  f1_straight_line.cpp  f1_straight_line.hpp  sga_random_track.cpp  sga_random_track.hpp  sga_straight_line.cpp  sga_straight_line.hpp  straight_line.cpp  straight_line.hpp
testbed/tests/environments/: car_environment.cpp  car_environment.hpp  mountains.cpp  mountains.hpp  random_track.cpp  random_track.hpp  small_hills.cpp  small_hills.hpp  straight_line.cpp  straight_line.hpp
